# week11_audio_filters

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  theory.md
src/: __init__.py  design_fir.py  design_iir.py  generate.py  plots.py
